This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

18-Mar-2006 (Gnomi)
  - (interpret.c) In apply cache entries for non-existing functions, the
      garbage collector counted the reference to the string name twice,
      causing the use of deallocated memory (Bug #463).

16-Mar-2006  (Lars Duening)
  - (comm.c) Moved the declaration of a variable which was declared in the
      middle of a block - gcc doesn't complain, but it's not ISO-C (Bug #462).

14-Mar-2006  (Gnomi)
  - (closure, object.c, interpret, exec.h, gcollect.c) lfun closures now
      keep track to which program they belong, to avoid ambiguities
      in case of complex inheritance relationships. This also affects
      the savefile format: lfun closures are saved with their inheritance
      path (Bug #443, #444).
  - (prolang.y) If a non-virtual baseclass was inherited multiple times
      with a virtual class inside the inheritance tree, its members
      were merged even though they shouldn't (Bug #422).
  - (prolang.y) The LPC compiler used a global variable for typetracking,
      which caused errors when types changed inside a variable
      initialisation (Bug #394).

12-Mar-2006  (Lars Duening)  (3.3.713)
  - Created snapshot.
  - (comm.c) Master function disconnect() receives the remaining input data is
       passed as the second argument (suggested by Philipp).

08-Mar-2006  (Malcom Tester)
  - (lp-245/obj/master.c) Made the move implementation more robust.

07-Mar-2006  (Lars Duening)
  - (pkg-tls.c) Two modifications to increase reconnect stability (thanks,
      Philipp!).
  - (prolang.y) Extended a LPC compiler warning when function indices
      are adjusted.

06-Mar-2006  (Lars Duening)
  - (backend, comm.c, object) The logon(obj) function moved from
      backend.c into object.c, and was renamed logon_object() - it's
      more sensical this way.