@@ -4,12 +4,14 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
-18-Mar-2006 (Lars Duening) -- Release 3.3.714
+27-Mar-2006 (Lars Duening) -- Release 3.3.714
 
     - Changed Efuns:
        + save_value(), restore_value(), save_object(), restore_object():
           lfun closures are now saved with their inheritance path to
           allow proper restoration under complex circumstances.
+       + tls_check_certificate(): GEN_DNS, GEN_EMAIL and GEN_URI
+          certificates are supported.
 
     - Fixed Crashers:
        + Lfun closures now keep proper track of which program
